--- a/static/main.css
+++ b/static/main.css
@@ -81,31 +81,53 @@ body .main-view {
 .page.sources .main form .input-row md-progress-circular {
   margin-top: 20px;
 }
-.page.sources .main .no-results {
-  padding: 20px;
+.page.sources .main .search-results {
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
 }
-.page.sources .main .result {
+.page.sources .main .search-results.waiting-true {
+  opacity: .1;
+}
+.page.sources .main .search-results .num-results {
+  padding: 0;
+  margin: 0 10px;
+}
+.page.sources .main .search-results .result {
   padding: 10px 10px;
   margin: 10px 0;
   border-bottom: 1px solid #eee;
 }
-.page.sources .main .result .name {
+.page.sources .main .search-results .result.waiting-true {
+  opacity: .3;
+}
+.page.sources .main .search-results .result .name {
   font-size: 18px;
 }
-.page.sources .main .result .name a {
+.page.sources .main .search-results .result .name a {
   font-size: 80%;
   margin-left: 5px;
   color: #333;
 }
-.page.sources .main .result .host {
+.page.sources .main .search-results .result .host {
   font-size: 14px;
 }
-.page.sources .main .truncated {
-  margin: 10px 0 50px;
+.page.sources .main .search-results .truncated {
+  margin: 10px 10px 50px;
   padding: 10px 0;
+  display: flex;
+  align-items: center;
 }
-.page.sources .main .truncated .smaller {
-  font-size: 75%;
+.page.sources .main .search-results .truncated .icon {
+  margin-right: 10px;
+  font-size: 30px;
+}
+.page.sources .main .search-results .truncated .msg h3 {
+  font-weight: bold;
+  font-size: 18px;
+  margin: 5px 0;
+}
+.page.sources .main .search-results .truncated .msg .extra-msg {
+  font-size: 14px;
 }
 .page.welcome {
   padding-top: 150px;
