--- a/static/main.css
+++ b/static/main.css
@@ -37,7 +37,14 @@ body .main-view {
   align-items: center;
   padding: 10px;
 }
-.ti-page-header .navbar a {
+.ti-page-header .navbar .links ul {
+  margin: 0;
+}
+.ti-page-header .navbar .links ul li {
+  list-style-type: none;
+  display: inline;
+}
+.ti-page-header .navbar .links ul li a {
   color: #999;
   font-size: 16px;
   padding: 5px 20px;
@@ -346,7 +353,7 @@ div.page.landing .benefit {
   padding: 100px 0;
 }
 div.page.landing .benefit h2 {
-  font-size: 32px;
+  font-size: 26px;
   font-weight: bold;
 }
 div.page.landing .benefit.effective {
@@ -373,11 +380,11 @@ div.page.landing .benefit .copy {
   flex-direction: column;
   justify-content: center;
   margin: 0 10%;
-  font-size: 20px;
+  font-size: 16spx;
   line-height: 1.3;
 }
 div.page.landing .testimonials-section {
-  padding: 50px 0 100px;
+  padding: 50px 0 0;
 }
 div.page.landing .testimonials-section .testimonials-header {
   padding: 50px 0 20px;
@@ -480,12 +487,16 @@ div.page.landing .testimonials-section .testimonials .testimonial .copy .attribu
 }
 div.footer {
   background: #20e168;
+  background: #333;
   padding: 50px 20px;
+  margin-top: 150px;
   color: #fff;
 }
 div.footer .content {
   max-width: 900px;
   margin: 0 auto;
+  font-size: 18px;
+  line-height: 1.3;
 }
 div.footer .content a {
   color: #fff;
@@ -493,32 +504,21 @@ div.footer .content a {
 div.footer .content a:hover {
   text-decoration: underline;
 }
-div.footer .content .links {
-  font-size: 26px;
-  text-align: right;
-  margin-bottom: 50px;
+div.footer .content ul.menu-links {
+  margin: 0;
+  line-height: 1.5;
 }
-div.footer .content .links a {
-  margin: 0 20px 0 0;
-  display: block;
-  float: left;
-  padding-bottom: 10px;
-}
-@media only screen and (max-width: 600px) {
-  div.footer .content .links a {
-    float: left;
-  }
-}
-div.footer .content .logo {
-  text-align: center;
-}
-div.footer .content .logo img {
-  width: 28px;
+div.footer .content ul.menu-links li {
+  list-style-type: none;
 }
 div.footer .content .credit {
-  font-size: 16px;
-  line-height: 1.4;
-  text-align: right;
+  line-height: 1.1;
+}
+div.footer .content .credit span.built-by {
+  display: block;
+}
+div.footer .content .credit span.funders {
+  font-size: 14px;
 }
 @media only screen and (max-width: 600px) {
   div.footer .content .credit {
