--- a/static/main.less
+++ b/static/main.less
@@ -69,10 +69,19 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    a {
-      color: #999;
-      font-size: 16px;
-      padding: 5px 20px;
+    .links {
+      ul {
+        margin: 0;
+        li {
+          list-style-type: none;
+          display: inline;
+          a {
+            color: #999;
+            font-size: 16px;
+            padding: 5px 20px;
+          }
+        }
+      }
     }
   }
 }
@@ -441,7 +450,7 @@ div.page.landing {
     justify-content: center;
     padding: 100px 0;
     h2 {
-      font-size: 32px;
+      font-size: 26px;
       font-weight: bold;
     }
 
@@ -469,7 +478,7 @@ div.page.landing {
       justify-content: center;
       //margin: 0 auto;
       margin: 0 10%;
-      font-size: 20px;
+      font-size: 16spx;
       line-height: 1.3;
     }
 
@@ -477,7 +486,7 @@ div.page.landing {
 
   .testimonials-section {
     //background: #eee;
-    padding: 50px 0 100px;
+    padding: 50px 0 0;
     .testimonials-header {
       padding: 50px 0 20px;
       h2 {
@@ -596,47 +605,42 @@ div.footer {
   //    );
 
   background: @baseColor;
+  background: #333;
 
 
   padding: 50px 20px;
-  //margin-top: 150px;
+  margin-top: 150px;
   color: #fff;
   .content {
     max-width: 900px;
     margin: 0 auto;
+    font-size: 18px;
+    line-height: 1.3;
     a {
       color: #fff;
       &:hover {
         text-decoration: underline;
       }
     }
-    .links {
-      font-size: 26px;
-      text-align: right;
-      margin-bottom: 50px;
-      a {
-        margin: 0 20px 0 0;
-        display: block;
-        float: left;
-        padding-bottom: 10px;
-        @media @xs {
-          float: left;
-        }
-        i {
-          //display: none;
+    ul.menu-links {
+      margin: 0;
+      line-height: 1.5;
+      li {
+        list-style-type: none;
+        a {
         }
       }
     }
-    .logo {
-      text-align: center;
-      img {
-        width: 28px;
-      }
-    }
+
     .credit {
-      font-size: 16px;
-      line-height: 1.4;
-      text-align: right;
+      line-height: 1.1;
+      span.built-by {
+        display:block;
+      }
+      span.funders {
+        font-size: 14px;
+      }
+
       @media @xs {
         text-align: left;
       }
