add access page.

--- a/static/main.less
+++ b/static/main.less
@@ -106,6 +106,15 @@ body {
   font-size: 20px;
 }
 
+.page.access {
+
+}
+
+.page.data {
+
+}
+
+
 .page.sources {
   padding-top: 100px;
   line-height: 1.4;
