--- a/static/main.less
+++ b/static/main.less
@@ -109,6 +109,38 @@ body {
 .page.access {
 
 }
+.page.check-dois {
+  .about {
+    margin-bottom: 50px;
+  }
+  .input {
+    .form-row {
+      margin: 30px;
+      &.email {
+        margin-top: 40px;
+      }
+    }
+
+    label {
+      color: #999;
+      font-size: 18px;
+    }
+    textarea {
+      width: 100%;
+      font-family: 'Monaco', monospace;
+      font-size: 12px;
+      border: 1px solid #ccc;
+    }
+
+
+    #submit {
+      float:right;
+      font-size: 20px;
+      padding: 10px 20px;
+
+    }
+  }
+}
 
 .page.data {
   ul {
