Use HTTPS instead of protocol relative URL
See https://jeremywagner.me/blog/stop-using-the-protocol-relative-url/ for a detailed explanation of why you shoud not use protocol relative URL in 2018.

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 
 
     <link rel="chrome-webstore-item" href="https://chrome.google.com/webstore/detail/iplffkdpngmdjhlpjmppncnlhomiipha">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0-rc4/angular-material.min.css">
     <link href="/static/main.css" rel="stylesheet">
     <link rel="icon" type="image/png" href="/static/img/favicon.png" />
@@ -41,7 +41,7 @@
 
 <!-- externally hosted libs outside the Angular ecosystem -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
 
 
 <!-- inlined scripts -->
